--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,3 +60,49 @@ jobs:
         run: npm run build
         env:
           NODE_ENV: production
+
+  e2e:
+    name: E2E 測試
+    runs-on: ubuntu-latest
+    needs: [build]
+    if: github.ref == 'refs/heads/main'
+    services:
+      postgres:
+        image: postgres:16
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: gameplatform_test
+        ports:
+          - 5432:5432
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: npm
+
+      - run: npm ci
+
+      - name: 安裝 Playwright 瀏覽器
+        run: npx playwright install chromium --with-deps
+
+      - name: 執行 E2E 測試
+        run: npx playwright test --project="Desktop Chrome"
+        env:
+          DATABASE_URL: postgresql://postgres:postgres@localhost:5432/gameplatform_test
+          NODE_ENV: test
+
+      - name: 上傳測試報告
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: playwright-report
+          path: playwright-report/
+          retention-days: 7
